@@ -1,4 +1,5 @@
 0.08
+ - Add another error check for duplicate 035a field.
 
 0.07 2025-11-14T15:39:34+01:00
  - Add ACKNOWLEDGEMENTS section to doc.
